# ar-facemesh

./: .gitignore  CMakeLists.txt  README.md
src/: ARmain.cpp  Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  DirectionalLight.h  Facemesh.cpp  Facemesh.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OBJloader.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  Test.cpp  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/Shaders/: bg_fragment_shader.frag  bg_vertex_shader.vert  face_shader.frag  face_shader.vert  shader.frag  shader.vert  triangle_shader.frag  triangle_shader.vert
src/include/: Test.h
